client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Application\Kompose\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: REACT_APP_HTTPSERVER
              value: http://34.107.234.37/
            - name: REACT_APP_WEBSOCKET
              value: ws://34.107.234.37/api/websocket
          image: docker.io/teledima/mega-laba-client:v2
          name: client
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
