handleimage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: handleimage
  name: handleimage
  namespace: chaos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: handleimage
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Application\Kompose\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        app: handleimage
    spec:
      containers:
        - env:
            - name: PORT
              value: "5001"
          image: docker.io/teledima/mega-laba-grpc-handle-image:v1
          name: handleimage
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
