minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Application\Kompose\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: minio
    spec:
      containers:
        - args:
            - server
            - --address
            - :9000
            - --console-address
            - :34333
            - /export
          image: minio/minio
          name: minio
          ports:
            - containerPort: 9000
            - containerPort: 34333
          resources: {}
          volumeMounts:
            - mountPath: /export
              name: minio-claim0
            - mountPath: /root/.minio
              name: minio-claim1
      restartPolicy: Always
      volumes:
        - name: minio-claim0
          persistentVolumeClaim:
            claimName: minio-claim0
        - name: minio-claim1
          persistentVolumeClaim:
            claimName: minio-claim1
status: {}
