ws-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: ws-server
  name: ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ws-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Application\Kompose\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: ws-server
    spec:
      containers:
        - env:
            - name: MINIO_ACCESSKEY
              value: minio
            - name: MINIO_BUCKET
              value: test
            - name: MINIO_ENDPOINT
              value: minio
            - name: MINIO_PORT
              value: "9000"
            - name: MINIO_SECRETKEY
              value: minio124
            - name: PORT
              value: "4002"
            - name: QUEUE
              value: test3
            - name: RABBIT_URL
              value: amqp://rabbitmq:rabbitmq@rabbitmq:5672
          image: docker.io/teledima/mega-laba-ws-server:v1
          name: ws-server
          ports:
            - containerPort: 4002
          resources: {}
      restartPolicy: Always
status: {}
