client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: chaos-app
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: docker.io/teledima/mega-laba-client:v1
          ports:
            - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: chaos-app
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
