handleimage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: handleimage
  name: handleimage
  namespace: chaos-app
spec:
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  selector:
    app: handleimage
status:
  loadBalancer: {}
