handleimage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handleimage
  namespace: chaos-app
  labels:
    app: handleimage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: handleimage
  template:
    metadata:
      labels:
        app: handleimage
    spec:
      containers:
        - name: handleimage
          image: docker.io/teledima/mega-laba-handle-image:v1
          ports: 
            - containerPort: 5001 
---
apiVersion: v1
kind: Service
metadata:
  name: handleimage
  namespace: chaos-app
spec:
  selector:
    app: handleimage
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
