httpserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  namespace: chaos-app
  labels:
    app: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: docker.io/teledima/mega-laba-http-server:v1
          ports: 
            - containerPort: 8000 
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: chaos-app
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
