img-consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: img-consumer
  namespace: chaos-app
  labels:
    app: img-consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: img-consumer
  template:
    metadata:
      labels:
        app: img-consumer
    spec:
      containers:
        - name: img-consumer
          image: docker.io/teledima/mega-laba-img-consumer:v1
---
apiVersion: v1
kind: Service
metadata:
  name: img-consumer
  namespace: chaos-app
spec:
  selector:
    app: img-consumer
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
