img_consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: img_consumer
  namespace: chaos-app
  labels:
    app: img_consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: img_consumer
  template:
    metadata:
      labels:
        app: img_consumer
    spec:
      containers:
        - name: img_consumer
          image: docker.io/teledima/mega-laba-img-consumer:v1
---
apiVersion: v1
kind: Service
metadata:
  name: img_consumer
  namespace: chaos-app
spec:
  selector:
    app: img_consumer
