minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: minio
  name: minio
  namespace: chaos-app
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "34333"
      port: 34333
      targetPort: 34333
  selector:
    app: minio
status:
  loadBalancer: {}
