rabbit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
  namespace: chaos-app
  labels:
    app: rabbit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:3.9-management
          ports: 
            - containerPort: 5672 
            - containerPort: 15672 
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
  namespace: chaos-app
spec:
  selector:
    app: rabbit
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
    - protocol: TCP
      port: 15672
      targetPort: 15672
