ws-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: ws-server
  name: ws-server
  namespace: chaos-app
spec:
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  selector:
    app: ws-server
status:
  loadBalancer: {}
