ws_server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: ws-server
  name: ws_server
spec:
  ports:
    - name: "4002"
      port: 4002
      targetPort: 4002
  selector:
    io.kompose.service: ws-server
status:
  loadBalancer: {}
