wsserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsserver
  namespace: chaos-app
  labels:
    app: wsserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wsserver
  template:
    metadata:
      labels:
        app: wsserver
    spec:
      containers:
        - name: wsserver
          image: docker.io/teledima/mega-laba-ws-server:v1
          ports: 
            - containerPort: 4002 
---
apiVersion: v1
kind: Service
metadata:
  name: wsserver
  namespace: chaos-app
spec:
  selector:
    app: wsserver
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
